fixed spacing issues

--- a/project1/css/index.css
+++ b/project1/css/index.css
@@ -111,16 +111,17 @@ h1, h2, h3, h4, h5 {
 }
 
 hr {
-	margin-left: 120px;
-	margin-right: 120px;
+	margin-left: 60px;
+	margin-right: 60px;
 }
 
 .main-content .top-content .text-content {
 	display: inline-block;
 	vertical-align: top;
-	width: 300px;
-	height: 150px;
-	margin: 5px 20px 3px 150px;
+	width: 400px;
+	height: 100px;
+	margin: 30px 5px 30px 50px;
+	align-items: center;
 }
 
 .main-content .top-content .text-content h4 {
@@ -145,7 +146,8 @@ hr {
 	vertical-align: top;
 	width: 300px;
 	height: 150px;
-	margin: 30px 5px 0 100px;
+	margin: 30px 5px 0 50px;
+	align-items: center;
 }
 
 .contact {
@@ -154,7 +156,7 @@ hr {
 	width: 300px;
 	height: 200px;
 	margin: 30px 10px 0 100px;
-	line-height: 40px;
+	line-height: 30px;
 }
 
 footer {
